# ma_lib_cpp_test_call

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
cmake/: CommonConfig.cmake
src/: main.cpp
